# coolify-examples

fastapi/fastapi-basic/: coolify.json  nixpacks.toml  pyproject.toml  requirements.txt
fastapi/fastapi-dockerfile/: Dockerfile  pyproject.toml
fastapi/fastapi-dockerfile/app/: main.py
